data/all_generated_tests/raw_wast_tests/nop_InfiniteLoops_260.wast
;; 1. **Test Description: Place `nop` inside a loop with a condition that always evaluates to true using `br_if`.**     - **Reasoning**: Ensure that `nop` does not alter the condition checking.     - **Check**: The loop should execute infinitely without altering control flow.

(assert_malformed
  (module (func $infinite-loop (loop (br_if 0 (i32.const 1)) (nop))))
  "unexpected end of section or function"
)